Cabal-Version:  3.0
name:           yol-testsuite
version:        0.1
synopsis:       Testsuite for the YOL suite
build-type:     Simple

-- BEGIN yol-module-options
common yol-module-options
    default-language:     GHC2024
    ghc-options:          -Wall
                          -Wno-name-shadowing
                          -Wno-missing-signatures
    default-extensions:   UnicodeSyntax
                          BlockArguments
                          RebindableSyntax
                          OverloadedStrings
                          QualifiedDo
                          ImpredicativeTypes
                          LinearTypes
    mixins:               base hiding (Prelude),
                          base (Prelude as Prelude.Base)
    build-depends:        base >= 4.13 && < 666,
                          text >= 2.0.1,
                          bytestring >= 0.11,
                          yul-dsl,
                          yul-dsl-linear-smc,
                          yol-suite,
                          linear-base >= 0.3.1,
                          linear-smc >= 2.2.3
-- END yol-module-options

library
  import:           yol-module-options
  exposed-modules:  Project
                    Num_Tests
  hs-source-dirs:   src
