Cabal-Version:  3.4
name:           yol-testsuite
version:        0.1.0.0
synopsis:       An example project of, and as a testsuite for, the yol-suite.
build-type:     Simple

--------------------------------------------------------------------------------
-- !! THE CODE BELOW SHOULD BE MANAGED BY ATTILA !!
--------------------------------------------------------------------------------

-- BEGIN attila-cabal-section
common yol-module-options
    default-language:     GHC2024
    ghc-options:          -Wall
                          -Wunused-packages
                          -Wno-name-shadowing
                          -Wno-missing-signatures
    default-extensions:   UnicodeSyntax
                          BlockArguments
                          RebindableSyntax
                          OverloadedStrings
                          QualifiedDo
                          ImpredicativeTypes
                          LinearTypes

common base-mixins-options
    mixins:               base hiding (Prelude),
                          base (Prelude as Prelude.Base)
    build-depends:        base >= 4.13 && < 666,
-- END attila-cabal-section

--------------------------------------------------------------------------------
-- !! THIS SECTION SHOULD BE MAINTAINED BY YOU !!
--------------------------------------------------------------------------------

library
  import:           yol-module-options
  hs-source-dirs:   src
  exposed-modules:  Project
                    Basic_Tests
                    Num_Tests
  build-depends:    yul-dsl-linear-smc,
                    yol-suite
